// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchBar should render 1`] = `
<SearchBar>
  <ReactFinalForm
    onSubmit={[Function]}
  >
    <form
      onSubmit={[Function]}
      style={
        Object {
          "width": "100%",
        }
      }
    >
      <Box
        margin="auto"
        maxWidth="739px"
        width="100%"
      >
        <div
          className="Box"
          style={
            Object {
              "margin": "auto",
              "maxWidth": "739px",
              "width": "100%",
            }
          }
        >
          <Field
            name="search"
            validate={[Function]}
          >
            <Input
              name="search"
              onChange={[Function]}
              placeholder="Search"
              value=""
            >
              <input
                className="Input"
                name="search"
                onChange={[Function]}
                placeholder="Search"
                type="text"
                value=""
              />
            </Input>
          </Field>
          <Box
            padding="0 0 0 10px"
          >
            <div
              className="Box"
              style={
                Object {
                  "padding": "0 0 0 10px",
                }
              }
            >
              <Button
                type="submit"
              >
                <button
                  className="Button"
                  style={Object {}}
                  type="submit"
                >
                  Search
                </button>
              </Button>
            </div>
          </Box>
        </div>
      </Box>
    </form>
  </ReactFinalForm>
</SearchBar>
`;

exports[`SearchBar should submit the Form 1`] = `
<SearchBar>
  <ReactFinalForm
    onSubmit={[Function]}
  >
    <form
      onSubmit={[Function]}
      style={
        Object {
          "width": "100%",
        }
      }
    >
      <Box
        margin="auto"
        maxWidth="739px"
        width="100%"
      >
        <div
          className="Box"
          style={
            Object {
              "margin": "auto",
              "maxWidth": "739px",
              "width": "100%",
            }
          }
        >
          <Field
            name="search"
            validate={[Function]}
          >
            <Input
              name="search"
              onChange={[Function]}
              placeholder="Search"
              value="query"
            >
              <input
                className="Input"
                name="search"
                onChange={[Function]}
                placeholder="Search"
                type="text"
                value="query"
              />
            </Input>
          </Field>
          <Box
            padding="0 0 0 10px"
          >
            <div
              className="Box"
              style={
                Object {
                  "padding": "0 0 0 10px",
                }
              }
            >
              <Button
                type="submit"
              >
                <button
                  className="Button"
                  style={Object {}}
                  type="submit"
                >
                  Search
                </button>
              </Button>
            </div>
          </Box>
        </div>
      </Box>
    </form>
  </ReactFinalForm>
</SearchBar>
`;
